--- a/src/scss/_benefit.scss
+++ b/src/scss/_benefit.scss
@@ -9,29 +9,7 @@
     .section {
         padding: 20px 0;
     }
-    .section-title {
-        > div {
-            @include flex-center;
-        }
-        .left {
-            h3 {
-                color: $navy-040;
-                font-size: 16px;
-                font-weight: 500;
-            }
-            * + * {
-                margin-left: 4px;
-            }
-        }
-        .right {
-            margin-left: auto;
-        }
-        .btn-link {
-            font-size: 14px;
-            font-weight: 400;
-        }
-        @include flex-center;
-    }
+   
     .section-cont {
         .ip-group {
             .row {
@@ -46,7 +24,6 @@
                     border-radius: $border-radius;
                 }
                 .btn {
-                    width: 70px;
                     flex: 0 0 auto;
                     margin-left: 10px;
                 }
@@ -264,6 +241,33 @@
         margin: 18px 0;
         justify-content: center;
         @include flex-center();
+    }
+}
+
+
+.coupon{
+    .section-title {
+        > div {
+            @include flex-center;
+        }
+        .left {
+            h3 {
+                color: $navy-040;
+                font-size: 16px;
+                font-weight: 500;
+            }
+            * + * {
+                margin-left: 4px;
+            }
+        }
+        .right {
+            margin-left: auto;
+        }
+        .btn-link {
+            font-size: 14px;
+            font-weight: 400;
+        }
+        @include flex-center;
     }
 }
 .comment-item {
