--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -46,6 +46,20 @@ hr.divider {
     li + li {
         margin-top: 10px;
     }
+    &.xs {
+        li {
+            font-size: 12px;
+            padding-left: 12px;
+            &:before {
+                width: 3px;
+                height: 3px;
+                top: 8px;
+            }
+        }
+        li + li{
+            margin-top:4px;
+        }
+    }
     &.sm {
         li {
             font-size: 14px;
