--- a/src/scss/_mypage.scss
+++ b/src/scss/_mypage.scss
@@ -96,18 +96,17 @@
                 font-size: 12px;
                 font-weight: 500;
                 text-align: center;
-                .pin {
-                    position: absolute;
-                    top: -40px;
-                    left: 21px;
-                }
                 span {
                     display: block;
                     font-size: 12px;
                     color: $navy-070;
                     font-weight: 500;
                 }
-
+                .pin {
+                    position: absolute;
+                    top: -40px;
+                    left: 21px;
+                }
                 .dot {
                     content: attr(data-step);
                     display: block;
@@ -125,14 +124,13 @@
                     top: -10px;
                     z-index: 1000;
                 }
-
                 &::after {
                     content: "";
                     position: absolute;
                     display: block;
                     width: 100%;
                     border-top: 4px dotted $navy-020;
-                    top: 30px;
+                    top: 31px;
                     left: 50%;
                     z-index: -1;
                 }
@@ -181,13 +179,15 @@
                         border-top: 4px solid $navy-020;
                     }
                 }
+                &:last-child {
+                    &::after {
+                        border-top: 0;
+                    }
+                }
                 &.finish {
                     .dot {
                         background: $green-060;
                         border: 2px solid $green-060;
-                    }
-                    &::after {
-                        border-top: 0;
                     }
                 }
                 .date-reached {
