--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -86,6 +86,20 @@
 							<span class="text">arrow-bot</span>
 						</li>
 						<li>
+							<span class="icon" style="background-color:#000">
+								<i class="ico arrow-right-gray000 xs"></i>
+							</span>
+							<span class="text">arrow-right-gray000</span>
+						</li>
+						<li>
+							<span class="icon"><i class="ico arrow-right-nav030 lg"></i></span>
+							<span class="text">arrow-right-navy030</span>
+						</li>
+						<li>
+							<span class="icon"><i class="ico arrow-right-nav040 xs"></i></span>
+							<span class="text">arrow-right-nav040</span>
+						</li>
+						<li>
 							<span class="icon"><i class="ico arrow-right-nav050 xs"></i></span>
 							<span class="text">arrow-right-nav050</span>
 						</li>
