--- a/src/components/input.html
+++ b/src/components/input.html
@@ -108,6 +108,9 @@
 							<div class="ip-group box">
 								<div class="row">
 									<input type="text" class="ip-txt" placeholder="이름">
+									<button type="button" class="icon-group btn-del">
+										<i class="ico delete md"></i>
+									</button>
 									<div class="line"></div>
 								</div>
 							</div>
