--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -40,6 +40,9 @@ $icon-size: (
         "next-sm": "icon_next_sm.svg",
         "arrow-right": "arrow-right.svg",
         "ico-check": "icon_check_off.svg",
+        "arrow-right-gray000": "icon_arrow_right_gray000.svg",
+        "arrow-right-nav030": "icon_arrow_right_navy030.svg",
+        "arrow-right-nav040": "icon_arrow_right_navy040.svg",
         "arrow-right-nav050": "icon_arrow_right_navy050.svg",
         "arrow-left": "arrow-left.svg",
         "arrow-bot": "icon_arrow_bot.svg",
