--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -19,55 +19,6 @@ $font-xl2: 24px !default;
 $font-xl3: 28px !default;
 $font-xl4: 32px !default;
 
-// color
-$red-060			: #d32828 !default;
-$yellow-060			: #fed500 !default;
-$pink-040			: #fd8484 !default;
-$pink-060			: #eb6565 !default;
-$orange-050			: #fd9f4d !default;
-$puple-040			: #a87df9 !default;
-
-$fuchsia-050		: #f8679c !default;
-$fuchsia-090		: #d22061 !default;
-
-$blue-040			: #467bce !default;
-$blue-050			: #009bfa !default;
-$light-blue-040		: #5b68fe !default;
-
-$gray-000			: #fff !default;
-$gray-005			: #f8f8f8 !default;
-$gray-010			: #f1f1f1 !default;
-$gray-020			: #e2e2e2 !default;
-$gray-030			: #d4d4d4 !default;
-$gray-040			: #c5c5c5 !default;
-$gray-050			: #b7b7b7 !default;
-$gray-060			: #898989 !default;
-$gray-070			: #5c5c5c !default;
-$gray-080			: #2e2e2e !default;
-$gray-090			: #121212 !default;
-
-$green-010			: #e9f7ef !default;
-$green-020			: #d2eddd !default;
-$green-030			: #a6dbbb !default;
-$green-040			: #79c99a !default;
-$green-050			: #4db778 !default;
-$green-060			: #20a556 !default;
-$green-070			: #187c41 !default;
-$green-080			: #10532b !default;
-$green-090			: #082916 !default;
-$green-100			: #031109 !default;
-
-$navy-010			: #eceeef !default;
-$navy-020			: #d9dddf !default;
-$navy-030			: #b3babf !default;
-$navy-040			: #8c989e !default;
-$navy-050			: #66757e !default;
-$navy-060			: #40535e !default;
-$navy-070			: #303e47 !default;
-$navy-080			: #202a2f !default;
-$navy-090			: #101518 !default;
-$navy-100			: #060809 !default;
-
 $black         		: #000 !default;
 $black-100     		: #333 !default;
 
@@ -81,7 +32,65 @@ $border-radius-20    : 20px !default;
 $border-radius-50    : 50px !default;
 $border-radius-circle: 50% !default;
 
-
+$default: #20a556;
+$red-060: #d32828;
+$yellow-060: #fed500;
+$fuchsia-050: #f8679c;
+$pink-040: #fd8484;
+$orange-050: #fd9f4d;
+$light-blue-040: #5b68fe;
+$puple-040: #a87df9;
+$blue-040: #467bce;
+$fuchsia-090: #d22061;
+$gray-000: #ffffff;
+$gray-005: #f8f8f8;
+$gray-010: #f1f1f1;
+$gray-020: #e2e2e2;
+$gray-030: #d4d4d4;
+$gray-040: #c5c5c5;
+$gray-050: #b7b7b7;
+$gray-060: #898989;
+$gray-070: #5c5c5c;
+$gray-080: #2e2e2e;
+$gray-090: #121212;
+$blue-050: #009bfa;
+$green-010: #e9f7ef;
+$green-020: #d2eddd;
+$green-030: #a6dbbb;
+$green-040: #79c99a;
+$green-050: #4db778;
+$green-060: #20a556;
+$green-070: #187c41;
+$green-080: #10532b;
+$green-090: #082916;
+$green-100: #031109;
+$navy-010: #eceeef;
+$navy-020: #d9dddf;
+$navy-030: #b3babf;
+$navy-040: #8c989e;
+$navy-050: #66757e;
+$navy-060: #40535e;
+$navy-070: #303e47;
+$navy-080: #202a2f;
+$navy-090: #101518;
+$navy-100: #060809;
+$pink-060: #eb6565;
+$blue-080: #0029ff;
+$dimlayer: rgba(0, 0, 0, 0.8);
+$green-060: #20a556;
+$lotte-rental: #e50012;
+$overnight-gray: #143c56;
+$pink-040: #fd8484;
+$dim-layer: rgba(0, 0, 0, 0.8);
+$gray-030: #d4d4d4;
+$gray-040: #c5c5c5;
+$fuchsia-050: #f8679c;
+$gray-040: #c5c5c5;
+$dim-layer: rgba(0, 0, 0, 0.8);
+$fuchsia-050: #f8679c;
+$overnight-gray: #143c56;
+$pink-040: #fd8484;
+$gray-030: #d4d4d4;
 
 
 
