--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -604,3 +604,69 @@ $offset: 187;
 	0% { transform: rotate(0deg); }
   100% { transform: rotate(359deg); }
 }
+
+/* swiper */
+.swiper {
+	width: 100%;
+	height: 100%;
+    position: relative;
+    overflow: hidden;
+    list-style: none;
+    z-index: 1;
+}
+
+.swiper-pointer-events {
+    touch-action: pan-y;
+}
+
+.swiper-wrapper{
+	position: relative;
+	width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    transition-property: transform;
+    box-sizing: content-box;
+}
+
+.swiper-slide {
+	flex-shrink: 0;
+	position: relative;
+	transform: translateZ(0);
+	transition-property: transform;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	align-items: center;
+	border-radius:20px;
+}
+.swiper-slide img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.swiper-pagination{
+	margin-top:5px;
+	text-align:center;
+}
+
+.swiper-pagination-bullet{
+	display:inline-block;
+	width:8px;
+	height: 8px;
+	margin-left:6px;
+	border-radius:50%;
+	background-color:$navy-040;
+	transition:all .4s ease;
+
+	&:first-child{
+		margin-left:0;
+	}
+	
+	&.swiper-pagination-bullet-active{
+		width:18px;
+		background-color:#5CD79A;
+		border-radius:3.5px;
+	}
+}
