--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -69,6 +69,13 @@ html.is-open, html.is-open body {
 			&.bot-reset{
 				padding-bottom:0;
 			}
+
+			&.full{
+				padding:20px 0 0;
+				.btn{
+					border-radius:0;
+				}
+			}
         }
     }
     &.active {
@@ -136,7 +143,7 @@ html.is-open, html.is-open body {
 			.head{
 				position:relative;
 				display: flex;
-				height:66px;
+				height:56px;
 				justify-content: center;
 				align-items: center;
 
@@ -149,7 +156,7 @@ html.is-open, html.is-open body {
 					height:100%;
 					padding:0 60px;
 					border-bottom:1px solid #D9D9D9;
-					line-height:66px;
+					line-height:56px;
 					text-align:center;
 					@include ell;
 				}
