--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -320,17 +320,21 @@
 	
 	&.box{
 		.line{
-			border:1px solid $line-color;
+			border:1px solid $navy-020;
 			height:100%;
 			transition: $animation;
 		}
 
 		.ip-txt{
-			padding:0 20px;
+			padding:0 40px 0 20px;
 
 			&:focus ~ .line{
 				border-color: $line-color-active;
 			}
+		}
+
+		.icon-group{
+			right:17px;
 		}
 
 		& .error{
